# django-template

./: db.sqlite3  pyproject.toml
django_template/: settings.py  swagger.py  urls.py
